add content to index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
       /* BIO STYLES */
       .bio-box {
-        border: 1px solid black;
+        border: 10px solid black;
+        width: 200px;
       }
       .bio-copy a {
         color: green;
