add content to index.html

--- a/index.html
+++ b/index.html
@@ -16,16 +16,21 @@
 
       /* BIO STYLES */
       .bio-box {
-        border: 10px solid black;
-        width: 200px;
+        border: 1px solid black;
+        font-size: 150%;
+        margin: 10%;
+        width: 50%;
       }
       .bio-copy a {
+        font-size: 150%;
         color: green;
       }
-    </style>
+      .bio-wrapper {
+      }
+        </style>
   </head>
   <body>
-    <h1>I'm an h1</h1>
+        <h1>I'm an h1</h1>
     <ul>
       <li>
         <a href="http://example.com/">Link</a>
@@ -38,6 +43,7 @@
       </li>
     </ul>
     <h2>I'm an h2</h2>
+    <div class="bio-wrapper">
     <div class="bio-box">
       <h3>Michael Hartl</h3>
       <a href="http://twitter.com/mhartl" class="social-link">here</a>
@@ -87,5 +93,7 @@
         The Future
       </p>
     </div>
+  </div>
+</div>
   </body>
 </html>
