--- a/index.html
+++ b/index.html
@@ -4,32 +4,48 @@
     <title>Test Page: Don't Panic</title>
     <meta charset="utf-8">
     <style>
-      /* GLOBAL STYLES */
-      a {
-        color: red;
-      }
+  /* GLOBAL STYLES */
+    html, body {
+      margin: 0;
+      padding: 0;
+    }
+    h1 {
+      margin-top: 0;
+    }
 
-      /* SOCIAL STYLES */
-      .social-link {
-        color: blue;
-      }
+  /* SOCIAL STYLES */
+  .social-link {
+    background: rgba(150, 150, 150, 0.5);
+    color: blue;
+  }
 
-      /* BIO STYLES */
-      .bio-box {
-        border: 1px solid black;
-        font-size: 150%;
-        margin: 10%;
-        width: 50%;
-      }
-      .bio-copy a {
-        font-size: 150%;
-        color: green;
-      }
-      .bio-wrapper {
-      }
-        </style>
+  /* BIO STYLES */
+  .bio-wrapper {
+    font-size: 24px;
+  }
+  .bio-box {
+    border: 1px solid black;
+    font-size: 1rem;
+    width: 50%;
+  }
+  .bio-box h3 {
+    font-size: 1.5em;
+  }
+  .bio-copy {
+    font-size: 1em;
+  }
+  .bio-copy a {
+    color: green;
+  }
+  .full-hero {
+    background-color: #c7dbfc;
+    height: 50vh;
+    width: 50vw;
+  }
+</style>
   </head>
   <body>
+    <div class="full-hero hero-home">
         <h1>I'm an h1</h1>
     <ul>
       <li>
@@ -42,6 +58,7 @@
         <a href="http://example.com/">Link</a>
       </li>
     </ul>
+  </div>
     <h2>I'm an h2</h2>
     <div class="bio-wrapper">
     <div class="bio-box">
